fix spacing

--- a/frontend/src/components/UserProfilePage/UserProfile.css
+++ b/frontend/src/components/UserProfilePage/UserProfile.css
@@ -1,10 +1,10 @@
 .body-container {
     width: 100%;
-    height: 600px;
+    height: 500px;
 }
 
 .spacing-top{
-    height: 150px;
+    height: 10px;
 }
 
 .profile-body-container {
